# DaktLib-Zip

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
include/dakt/zip/: compressor
include/dakt/zip/capi/: zip_exports.h
include/dakt/zip/interfaces/: decompressor.h  decompressor.hpp  icompressor.hpp
include/dakt/zip/methods/: lz4.h  lz4lite.h  lz4lite.hpp  lzx.h  lzx.hpp  store.h  store.hpp  xmem.h  xmem.hpp  zlib.h  zlib.hpp  zstd.h  zstd.hpp
include/dakt/zip/registrar/: compression_registry.h  compression_registry.hpp
include/dakt/zip/streams/: inflate_stream.h
include/dakt/zip/utilities/: bit_stream.h  compressor.h  detector.h
src/capi/: zip_exports.cxx
src/interfaces/: decompressor.cpp  decompressor.cxx
src/methods/: compression.cpp  lz4.cxx  lz4lite.cpp  lz4lite.cxx  lzx.cpp  lzx.cxx  store.cpp  store.cxx  xmem.cpp  xmem.cxx  zlib.cpp  zlib.cxx  zstd.cpp  zstd.cxx
src/registrar/: compression_registry.cpp  compression_registry.cxx
tests/: zip_tests.cxx
